--- a/generate/Dockerfile
+++ b/generate/Dockerfile
@@ -17,6 +17,7 @@ WORKDIR /app
 
 COPY --from=builder /builder/cmd/main ./cmd/main
 COPY --from=builder /builder/config/config.yaml ./config/config.yaml
+COPY --from=builder /builder/config/prometheus.yml ./config/prometheus.yml
 
 EXPOSE 8088
 
